# Neditor

./: .gitignore  LICENSE  NEDITOR_VISION_AND_CAPABILITIES.md  README.md  RELIABILITY.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.test.json  vite.config.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/fixtures/export/: business_report.md
src-tauri/icons/: icon.icns
src-tauri/src/: ai_cleanup.rs  ai_humanizer.rs  audit.rs  backlinks.rs  bibliography.rs  calculations.rs  citation_discovery.rs  cli.rs  cli_ipc.rs  compile_options.rs  compiler.rs  compiler_support.rs  compiler_types.rs  data_exchange.rs  diagnostics.rs  diagnostics_types.rs  document_ast.rs  document_compare.rs  export.rs  export_commands.rs  export_media.rs  filesystem.rs  filesystem_watch.rs  footnotes.rs  front_matter.rs  generated_sections.rs  git.rs  git_support.rs  git_types.rs  google_auth.rs  html_preview.rs  indexing.rs  layout.rs  lib.rs  link_validation.rs  local_agents.rs  mail_merge.rs  main.rs  manifest.rs  markdown_tables.rs  (+23 more)
src-tauri/src/export/: blog.rs  bundle.rs  docx.rs  epub.rs  google_docs.rs  html.rs  html_slides.rs  latex.rs  pdf.rs  pptx.rs  shared.rs
src-tauri/src/tests/: ai_cleanup_tests.rs  citation_tests.rs  cli_tests.rs  compiler_core_tests.rs  document_structure_tests.rs  example_fixture_tests.rs  export_command_tests.rs  export_conformance_tests.rs  export_option_tests.rs  export_tests.rs  external_transform_tests.rs  file_command_tests.rs  ipc_command_tests.rs  media_export_tests.rs  (+7 more)
(+182 files in other folders)
